--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../wCoder/img/first.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
+      <img src="../wCoder/first.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>wCoder for Coding</h5>
         <p>Get started with us. Coding is everything</p>
