--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../wCoder/first.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
+      <img src="first.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>wCoder for Coding</h5>
         <p>Get started with us. Coding is everything</p>
@@ -145,7 +145,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../wCoder/img/second.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
+      <img src="second.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Globally connected.</h5>
         <p>Access to the world wide web 24 hours online</p>
@@ -155,7 +155,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../wCoder/img/third.jpeg" height="460px" width="400px"class="d-block w-100" alt="...">
+      <img src="third.jpeg" height="460px" width="400px"class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Certified by Codig World</h5>
         <p>Enhance learnin, productive skills, problem solvings</p>
