--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img class="bd-placeholder-img" width="200" height="250" src="../wCoder/img/blog4.jpeg">
+          <img class="bd-placeholder-img" width="200" height="250" src="blog4.jpeg">
         </div>
       </div>
     </div>
@@ -202,7 +202,7 @@
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img class="bd-placeholder-img" width="200" height="250" src="../wCoder/img/blog2.jpeg">
+          <img class="bd-placeholder-img" width="200" height="250" src="blog2.jpeg">
         </div>
       </div>
     </div>
@@ -219,7 +219,7 @@
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img class="bd-placeholder-img" width="200" height="250" src="../wCoder/img/blog1.jpeg">
+          <img class="bd-placeholder-img" width="200" height="250" src="blog1.jpeg">
         </div>
       </div>
     </div>
@@ -233,7 +233,7 @@
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img class="bd-placeholder-img" width="200" height="250" src="../wCoder/img/blog3.jpeg">
+          <img class="bd-placeholder-img" width="200" height="250" src="blog3.jpeg">
         </div>
       </div>
     </div>
