--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="../wCoder/index.html">wCoder</a>
+  <a class="navbar-brand" href="/wCoder/index.html">wCoder</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,7 +23,7 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../wCoder/about.html">About</a>
+        <a class="nav-link" href="/wCoder/about.html">About</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -40,7 +40,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="../wCoder/contact.html">Contact Us</a>
+        <a class="nav-link" href="/wCoder/contact.html">Contact Us</a>
       </li>
 
       <li class="nav-item">
@@ -135,7 +135,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="first.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
+      <img src="/wCoder/first.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>wCoder for Coding</h5>
         <p>Get started with us. Coding is everything</p>
@@ -145,7 +145,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="second.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
+      <img src="/wCoder/second.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Globally connected.</h5>
         <p>Access to the world wide web 24 hours online</p>
@@ -155,7 +155,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="third.jpeg" height="460px" width="400px"class="d-block w-100" alt="...">
+      <img src="/wCoder/third.jpeg" height="460px" width="400px"class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Certified by Codig World</h5>
         <p>Enhance learnin, productive skills, problem solvings</p>
@@ -188,7 +188,7 @@
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img class="bd-placeholder-img" width="200" height="250" src="blog4.jpeg">
+          <img class="bd-placeholder-img" width="200" height="250" src="/wCoder/blog4.jpeg">
         </div>
       </div>
     </div>
@@ -202,7 +202,7 @@
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img class="bd-placeholder-img" width="200" height="250" src="blog2.jpeg">
+          <img class="bd-placeholder-img" width="200" height="250" src="/wCoder/blog2.jpeg">
         </div>
       </div>
     </div>
@@ -219,7 +219,7 @@
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img class="bd-placeholder-img" width="200" height="250" src="blog1.jpeg">
+          <img class="bd-placeholder-img" width="200" height="250" src="/wCoder/blog1.jpeg">
         </div>
       </div>
     </div>
@@ -233,7 +233,7 @@
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img class="bd-placeholder-img" width="200" height="250" src="blog3.jpeg">
+          <img class="bd-placeholder-img" width="200" height="250" src="/wCoder/blog3.jpeg">
         </div>
       </div>
     </div>
