--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="../wCoder/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/wCoder/index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="/wCoder/about.html">About</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -40,7 +40,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="../wCoder/contact.html">Contact Us</a>
+        <a class="nav-link" href="/wCoder/contact.html">Contact Us</a>
       </li>
 
       <li class="nav-item">
@@ -135,7 +135,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="third.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
+      <img src="/wCoder/third.jpeg" height="460px" width="400px" class="d-block w-100" alt="...">
     </div>
   </div>
 
@@ -144,19 +144,19 @@
   <h1 class="text-center">About Us</h1><br>
   <div class="row">
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="about3.jpeg">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="/wCoder/about3.jpeg">
         <h2><strong>Skilled</strong></h2>
         <p>“when you don't create things, you become defined by your tastes rather than ability. your tastes only narrow & exclude people. so create.”</p>
         <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="about2.jpeg">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="/wCoder/about2.jpeg">
         <h2><strong>Effective</strong></h2>
         <p>“Object-oriented programming offers a sustainable way to write spaghetti code. It lets you accrete programs as a series of patches.” </p>
         <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="about1.jpeg">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="/wCoder/about1.jpeg">
         <h2><strong>Productive</strong></h2>
         <p>“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.”</p>
         <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
@@ -172,7 +172,7 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="laptop1.jpeg">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/wCoder/laptop1.jpeg">
       </div>
 
       <div class="col-md-7 order-2">
@@ -180,7 +180,7 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="laptop2.jpeg">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/wCoder/laptop2.jpeg">
       </div>
 
     </div>
