--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
 <form>
   <div class="form-group">
     <label for="exampleFormControlInput1">FirstName</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter your name">
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Firstname">
   </div>
   <div class="form-group">
     <label for="exampleFormControlInput1">Email address</label>
@@ -149,15 +149,16 @@ Gender
     Female
   </label>
 </div><br>
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Tell us about yourself</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
   
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Message</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
-   <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
+  
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </div>
