--- a/contact.html
+++ b/contact.html
@@ -129,8 +129,8 @@
 <div class="container my-4">
 <form>
   <div class="form-group">
-    <label for="exampleFormControlInput1">FirstName</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Firstname">
+    <label for="exampleFormControlInput1">Firstname</label>
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="enter your name">
   </div>
   <div class="form-group">
     <label for="exampleFormControlInput1">Email address</label>
